# grass

./: Cargo.toml
assets/shaders/: grass_compute.wgsl  grass_render.wgsl  normal_pass.wgsl  outline.wgsl
src/: camera.rs  entity.rs  entity.wgsl  fog_plane.rs  fog_plane.wgsl  framework.rs  grass.rs  grass.wgsl  main.rs  mesh.rs  post.rs  post.wgsl  sky.wgsl  waterfall.wgsl
src/grass/: compute.rs  mod.rs  render.rs
src/old/: entity.rs  entity.wgsl  fog_plane.rs  fog_plane.wgsl  framebuffer.rs  main.rs  mesh.rs  post.rs  sky.wgsl  terrain.rs  tone.wgsl  waterfall.rs  waterfall.wgsl
src/toon/: core_pipeline.rs  mod.rs  normal_pass.rs  outline.rs  postprocess.rs
src/toon/grass/: mod.rs  render.rs
