[package]
name = "grass"
version = "0.1.0"
edition = "2021"

[features]
trace = ["bevy/trace"]

[dependencies]
wgpu = "0.13.1"
bytemuck = { version = "1.10", features = ["derive"] }
winit = "*"
glam = "*"
async-executor = "*"
env_logger = "*"
log = "*"
pollster = "*"
noise = "0.7"
obj-rs = "0.7"
bitflags = "1.3"
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "44566db" }
radsort = "0.1"
